--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
 - Development:
   - Contributing: contributing.md
   - Code of Conduct: code_of_conduct.md
-  # - Coverage report: coverage.md
+  - Coverage report: coverage.md
 - Insiders:
   - insiders/index.md
   - Getting started:
@@ -113,7 +113,7 @@ plugins:
     - scripts/gen_ref_nav.py
 - literate-nav:
     nav_file: SUMMARY.md
-# - coverage
+- coverage
 - mkdocstrings:
     handlers:
       python:
