--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ getter = "scripts.get_version:get_version"
 
 [tool.pdm.build]
 # Include as much as possible in the source distribution, to help redistributors.
-excludes = ["**/.pytest_cache", "**/.mypy_cache"]
+excludes = ["**/.pytest_cache"]
 source-includes = [
     "config",
     "docs",
@@ -82,13 +82,13 @@ maintain = [
 ci = [
     "duty>=1.6",
     "griffe>=1.10",
-    "ruff>=0.4",
+    "pydantic>=2.10",
     "pytest>=8.2",
     "pytest-cov>=5.0",
     "pytest-randomly>=3.15",
     "pytest-xdist>=3.6",
-    "mypy>=1.10",
-    "pydantic>=2.10",
+    "ruff>=0.4",
+    "ty>=0.0.14",
     "types-markdown>=3.6",
     "types-pyyaml>=6.0",
 ]
