--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           python-version: "3.15-dev"
 
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
 
     steps:
     - name: Checkout
@@ -113,6 +114,7 @@ jobs:
           resolution: lowest-direct
         - os: windows-latest
           resolution: lowest-direct
+
     runs-on: ${{ matrix.os }}
     continue-on-error: true
 
